admin can delete/undelete user

--- a/DoctorForums/Views/Admin/Index.cshtml
+++ b/DoctorForums/Views/Admin/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<DoctorForums.DAO.user>
 
 @{
-    ViewBag.Title = "View1";
+    ViewBag.Title = "Admin index page";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -23,35 +23,50 @@
         </th>
         <th>
             @Html.DisplayNameFor(model => model.tel)
-        </th>        
+        </th>
         <th>
             @Html.DisplayNameFor(model => model.role_name)
-        </th>       
+        </th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.full_name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.user_address)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.tel)
-        </td>        
-        <td>
-            @Html.DisplayFor(modelItem => item.role_name)
-        </td>        
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.full_name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.user_address)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.tel)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.role_name)
+            </td>
+            <td>
+                @Html.ActionLink("Details", "User/Detailed", new { id = item.id }) |
+                <form action="@Url.Action("DeleteUser", "Admin")"
+                      method="POST">
+                    <input type="hidden" name="userId" value="@item.id" />
+                    <button type="submit">
+                        @{
+                            if (item.is_deleted == true)
+                            {
+                                <text>Deleted</text>
+                            }
+                            else
+                            {
+                                <text>Delete</text>
+                            }
+                        }
+                    </button>
+                </form>
+            </td>
+        </tr>
+    }
 
 </table>
