fix unsupported ntext/text linq to sql

--- a/DoctorForums/Views/Shared/_Layout.cshtml
+++ b/DoctorForums/Views/Shared/_Layout.cshtml
@@ -128,7 +128,7 @@
 
     <footer class="uk-block uk-block-secondary uk-contrast">
         <div class="uk-container uk-container-center">
-            FIXME: This is a nice looking footer waiting to be implemented.
+            Copyright &copy; 2015, Sample company.
         </div>
     </footer>
 
